commit from rog

--- a/日本麻将专家系统.md
+++ b/日本麻将专家系统.md
@@ -15,7 +15,7 @@
 
 在后续的讨论中，为了简化说明，将万子、筒子和条子分别用M, P和S三个字母代替。例如，牌一万简记为1M，而三索简记为3S.
 
-![image-20210511185902950](.\日本麻将专家系统.assets\image-20210511185902950.png)
+![image-20210511185902950](日本麻将专家系统.assets/image-20210511185902950.png)
 
 ### 玩法
 
@@ -43,7 +43,7 @@
 
 * 雀头指2张相同的牌。
 
-![image-20210511190444253](.\日本麻将专家系统.assets\image-20210511190444253.png)
+![image-20210511190444253](日本麻将专家系统.assets/image-20210511190444253.png)
 
 ### 鸣牌
 
