--- a/日本麻将专家系统.md
+++ b/日本麻将专家系统.md
@@ -3,7 +3,7 @@
 本篇报告是由*沈溯 18307130102*完成的复旦大学2021年春季学期人工智能课程的PJ. 本次PJ的要求是撰写一篇专家系统的设计报告。本次PJ选取日本三人麻将(简称三麻)为领域，探讨在三麻规则下设计一个专家系统的可行性和设计细节。本篇报告分为以下若干内容：
 
 0. [日本三人麻将介绍](#日本三人麻将介绍)
-1. [三麻专家系统设计前瞻](# 三麻专家系统设计前瞻)
+1. [三麻专家系统设计前瞻](#三麻专家系统设计前瞻)
 
 ## 日本三人麻将介绍
 
@@ -27,11 +27,11 @@
 
 一局游戏由一名或多名玩家**和牌**，或者**流局**结束。
 
-当有玩家和牌，若庄家和牌，或者流局时庄家听牌，则庄家在下一小局继续坐庄，这个过程称为**连庄**。若庄家不和牌且流局时不听牌，则庄家交给当前南风位的玩家，称为**流庄**。
+当有玩家[和牌](#和牌)，若庄家和牌，或者流局时庄家听牌，则庄家在下一小局继续坐庄，这个过程称为**连庄**。若庄家不和牌且流局时不听牌，则庄家交给当前南风位的玩家，称为**流庄**。
 
-流局指所有玩家均未和牌，或者达到一定条件(九种九牌或者四杠散了)情况下，进行的重新洗牌进行游戏的流程。在九种九牌或者四杠散了的情况下，庄家并不会
+**流局**指所有玩家均未和牌，或者在游戏过程中达到一定条件(九种九牌或者四杠散了)时，进行的重新洗牌进行游戏的流程。在九种九牌或者四杠散了的情况下，庄家会继续连庄。
 
-日本四人麻将中有场风的概念。场风根据游戏的进行，依次为东风、南风、西风、北风。当游戏开始时，场风为东风。此时称为东风场。当所有玩家都完成一次坐庄后，场风进入南风(称为南入)。同理，南风场结束会西入，西风场结束会北入。东南西北场均打完(即所有人轮流坐庄4次)的比赛(游戏)称为全庄战。由于完成一次全庄战的时间较长，全庄战在现在的休闲以及比赛中已经不常见了。半庄战指进行半个全庄的比赛，即，完成东风场和南风场的比赛。东风战指只进行东风场的比赛。三麻中延续了四麻中半庄战和东风战的概念。
+日本四人麻将中有**场风**的概念。场风根据游戏的进行，依次为东风、南风、西风、北风。当游戏开始时，场风为东风。此时称为东风场。当所有玩家都完成一次坐庄后，场风进入南风(称为南入)。同理，南风场结束会西入，西风场结束会北入。东南西北场均打完(即所有人轮流坐庄4次)的比赛(游戏)称为全庄战。由于完成一次全庄战的时间较长，全庄战在现在的休闲以及比赛中已经不常见了。**半庄战**指进行半个全庄的比赛，即，完成东风场和南风场的比赛。**东风战**指只进行东风场的比赛。三麻中延续了四麻中半庄战和东风战的概念。
 
 事实上，每个玩家轮流坐庄的次数越多，越能最小化运气的成分。但实际上，东风战也好，半庄战也好，并不会对模切策略产生显著的影响。
 
@@ -45,11 +45,13 @@
 
 ![image-20210511190444253](日本麻将专家系统.assets/image-20210511190444253.png)
 
-### 鸣牌
+### 鸣牌和门前清
+
+#### 鸣牌
 
 通俗地理解，鸣牌是将手牌亮出来给所有玩家看的行为。在常规的日麻中，鸣牌共分为三种，吃，碰和杠。在三麻中，由于不允许吃牌，所以实际的鸣牌只有碰和杠。除此之外，三麻还有特殊的拔北操作，也被视作鸣牌的一种。
 
-#### 碰
+##### 碰
 
 当其他玩家打出一张牌，并且你的手中有两张与之相同的牌时，你可以选择碰牌。碰后的牌视为一组刻子，摊开放在一边。
 
@@ -57,13 +59,13 @@
 
 > 如左图，主视角下家打出一张东风。由于主视角有两张东风，此时可以选择碰。碰出的东风刻子摊开放在旁边。
 
-#### 杠
+##### 杠
 
 杠子是相同的4张牌。在计算和牌条件的时候，一个杠子视为一个刻子。
 
 杠分为3种，大明杠，加杠和暗杠。无论是哪种杠，由于杠后的杠子视作刻子，杠后需要再摸一张牌。此外，每一次杠牌，都会翻开一张新的王牌，作为宝牌的指示牌。在一局中，如果有超过一个玩家开合杠总计4次，则会导致四杠散了的流局。
 
-##### 大明杠
+###### 大明杠
 
 大明杠(又称明杠)是当其他玩家打出一张牌时，你手上有3张相同的牌（即，有这张牌的暗刻，暗刻指不是碰出的刻子），则此时可以选择杠牌，得到的杠子摊开放在一边。
 
@@ -71,7 +73,7 @@
 
 > 如左图，主视角下家摸9s切白牌。而主视角恰有一组白的暗刻。此时可以选择大明杠。
 
-##### 加杠
+###### 加杠
 
 加杠是指当摸到一张牌，并且先前你通过碰牌获得了这张牌的刻子，此时你可以选择加杠，将刻子变成杠子。
 
@@ -79,7 +81,7 @@
 
 > 如左图，主视角当前进张为东风。由于主视角已经有一组碰过的东风刻子，此时可以选择加杠。
 
-##### 暗杠
+###### 暗杠
 
 暗杠是指手牌中有4张相同的未鸣牌的牌，此时可以选择暗杠，杠出的杠子摊开放在一边。
 
@@ -87,7 +89,7 @@
 
 > 如左图，主视角当前进张为西风。加上进张的西风，主角恰有4张未鸣的西风。此时可以选择暗杠。
 
-#### 拔北(仅限三麻)
+##### 拔北(仅限三麻)
 
 在三麻中，由于没有北家，字牌北有特殊的作用。
 
@@ -99,11 +101,79 @@
 
 > 杠和拔北操作后的并不是从牌山中摸牌，而是从岭上牌中摸牌。如果摸到的牌恰好是听的牌，并且玩家选择和牌，此时记岭上开花役。
 
-### 和牌
+#### 门前清
 
-和牌遵循一定的原则。基本的原则是总计四个顺子或刻子再加一个雀头。也有一些特殊的役种，例如七对子以及国士无双，不需要服从上述和牌原则。
+门前清又称门清，是一种状态。当玩家没有吃、碰或者明杠时，则称玩家处于门前清状态。
 
-此外，在日麻中，无役不能和牌。日麻中役种繁多，以下只介绍几类常见的役种。更多的役种可以参考此
+由于加杠是在碰的前提下进行的，所以加杠之前一定已经破坏了门前清状态。此外，暗杠和拔北不破坏门前清状态。
+
+### 和牌，听牌和役种
+
+**和牌**的基本原则是总计四个的顺子或刻子再加一个雀头。也有一些特殊的役种，例如七对子以及国士无双，不需要服从上述和牌原则。
+
+需要注意的是在日麻中，玩家持有13张手牌，所以总是需要等待他人打出一张牌或者自己摸到需要的牌才能和牌。通过他人打出的牌和牌称为**荣和**，而自己摸到和牌需要的牌称为**自摸**。只差一张牌就能和牌的状态称为**听牌**状态。
+
+日麻中有**役种**一说。役种是用来和牌以及清算和牌点数的。在日麻中，无役(即牌型已经达到了上述原则，但是不满足任何役种)不能和牌(但是也算听牌)。日麻中役种繁多，以下只介绍几类常见的役种。更多的役种可以参考[此链接](https://zh.moegirl.org.cn/Category:%E6%97%A5%E6%9C%AC%E9%BA%BB%E5%B0%86:%E5%BD%B9%E7%A7%8D)。
+
+* 立直
+
+  立直是日麻中出现概率最高的役种(45.1%)，也是日麻最大的特色之一。因为立直的存在，日麻也被称为立直麻将。
+
+  立直是指在玩家门前清的状态下听牌时，可以选择支付1000点数作为立直棒，以宣告立直。宣告立直时打出的牌横放在牌河中。立直之后每次摸牌时，如果没有自摸，则必须切掉摸进的牌(但是可以拔北以及暗杠)。
+
+  立直计一番。立直的玩家将获得里宝牌悬赏役的机会。若立直以后第一巡就和牌，额外计一发的役种，多一番。
+
+  ![立直实例]()
+
+* 役牌
+
+  役牌是日麻中出现概率次高的役种(40.0%)。役牌指三元牌的刻子，或者自风以及场风的刻子。
+
+  一次和牌可以有多组役牌。每组役牌计一番。
+
+* 断幺九
+
+  断幺九是日麻中出现概率第三高的役种(21.4%)。
+
+  断幺九指和牌时没有幺九牌。所谓幺九牌就是所有的字牌以及一、九开头的数牌。
+
+  断幺九计一番。
+
+* 平和
+
+  平和是日麻中出现概率第四高的役种(19.9%)。平和必须处于门前清状态下，且听牌时手牌是3个顺子加一个不是役牌类型的雀头，并且最后是顺子的两面听。
+
+  平和计一番。
+
+  > 即，最后听牌时可以是2m3m的顺子听1m和4m, 但不能是1m2m的顺子听3m. 雀头不能是场风、自风和三元牌。
+
+* 门前清自摸和
+
+  门前清自摸和出现的概率为17.6%. 门前清自摸和指在门前清状态下，自摸导致的和牌。注意，立直状态下的自摸和一定是门前清自摸和。
+
+  门前清自摸和计一番。
+
+* 混一色/清一色
+
+  混一色和清一色也是日麻中较为常见的役种，出现概率分别为6.31%和0.94%. 混一色指存在字牌的情况下，数牌全为同一种花色的和牌。清一色指只有数牌且数牌全为同一种花色的和牌。
+
+  门前清情况下的混一色和清一色分别计3番和6番。非门清状态下的混一色和清一色分别计2番和5番。
+
+* 对对和
+
+  对对和的和牌概率为3.92%.
+
+  对对和指4组刻子加一组雀头形式的和牌。
+
+  对对和计2番。
+
+* 七对子
+
+  七对子的概率为2.52%.
+
+  七对子指和牌时牌型为七个对子。
+
+  七对子计2番。
 
 ## 三麻专家系统设计前瞻
 
